--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,1 @@
-<app-header></app-header>
-
-<app-static-overview></app-static-overview>
-<div class="container">
-  <app-category></app-category>
-</div>
-
-
-<app-footer></app-footer>
+<router-outlet></router-outlet>
