--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -1,1 +1,27 @@
-category component
+<app-category-overview *ngIf="selectedCategory!=null" [category]="selectedCategory"></app-category-overview>
+
+<!--<div class="card rounded-0 font-weight-bold">
+  <div class="card-header bg-dark rounded-0 text-white">
+    {{subCategory.description}}
+  </div>
+  <div class="card-body">
+    <div *ngFor="let song of subCategory.songs" class="card mt-2">
+      <div class="row no-gutters text-left card-body bg-dark text-white">-->
+<!--VOTING DIV-->
+<!--<div style="height:auto;width:100px;" class="col-auto text-left bg-info">
+    <img src="//placehold.it/200" class="img-fluid" alt="">
+</div>-->
+<!--<div class="col offset-sm-1">
+  <div class="font-weight-normal  card-block px-2">
+    <h4 class="card-title">{{song.title}}</h4>
+    <p class="card-text font-italic">{{song.description}}</p>
+  </div>
+</div>-->
+<!--IMAGE DIV-->
+<!--<div style="height:auto;width:100px;" class="col-auto text-right bg-info">
+    <img src="//placehold.it/200" class="img-fluid" alt="">
+</div>-->
+<!--</div>
+    </div>
+  </div>
+</div>-->
