--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<app-static-overview></app-static-overview>
+
+
 <div class="clearfix offset-sm-1 col-md-10">
   <div *ngFor="let category of categoryData" (click)="CategorySelectedEvent(category.id)"
        class="card category-image mr-4 mb-4 shadow btn">
