--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,9 @@
-<footer class="footer bg-dark font-weight-bold text-center">
+<footer class="footer bg-info font-weight-bold text-center">
   <br />
   <div class="container-fluid">
-    <span class="text-muted text-white">Place sticky footer content here.</span>
+    <span class="text-white">
+      Copyright (c) MUSIC MATCH 2016
+    </span>
   </div>
   <br />
 </footer>
