--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" [routerLink]="['/dashboard']">MUSIC MATCH</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-info ">
+  <a class=" font-weight-bold navbar-brand" [routerLink]="['/dashboard']">MUSIC MATCH</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
           aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,15 +8,15 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/category','fifa']"> FIFA <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/category','FIFA']"> FIFA <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link">COMING SOON</a>
       </li>
     </ul>
     <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2 rounded-0" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0 bg-danger text-white" type="submit">Search</button>
     </form>
   </div>
 </nav>
